--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "15.2.3",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -32,6 +33,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "@types/validator": "^13.12.3",
     "eslint": "^9.23.0",
     "eslint-config-next": "15.1.4",
     "eslint-plugin-react-hooks": "^5.2.0",
